♻️ moved away from deprecated URL constructor + added NUMBER and BOOLEAN to PropertyType enum + some code rework